<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tabata Rhythm Timer</string>
    <string name="package_name">com.sisa.tabata</string>
    <string name="app_play_url">https://play.google.com/store/apps/details?id=com.sisa.tabata</string>
    <string name="app_play_url_short">https://goo.gl/TwHeVl</string>
    <string name="app_play_icon_url">"https://lh3.googleusercontent.com/TwyR4SH03RtUe_9O_zFGpDexv2arxVYapZCrwp5xBol7YHITjt_wT79V7tIYJXA_SWk=h150-rw"</string>
    <string name="action_settings">Settings</string>

    <string name="main_workout_progress">Workout progress</string>
    <string name="main_default_section_text">SECTION 1 of 1</string>
    <string name="main_default_current_round_timer_text">00:00.0</string>
    <string name="main_default_workout_type">WORK</string>
    <string name="main_default_round_counter_text">ROUND 1 of 1</string>
    <string name="main_default_total_remaining_text">00:00:00</string>
    <string name="main_no_time_set">No time set</string>

    <string name="form_workout_name_label">WORKOUT NAME</string>
    <string name="form_workout_description_label">DESCRIPTION</string>
    <string name="form_workout_sections_label">SECTIONS</string>
    <string name="form_workout_total_time_label">TOTAL TIME</string>
    <string name="form_workout_add_new_section">+</string>
    <string name="form_workout_new_action_text">CREATE NEW WORKOUT</string>
    <string name="form_workout_edit_action_text">EDIT WORKOUT</string>

    <string name="form_section_total_time_label">Total time</string>
    <string name="form_section_new_action_text">CREATE NEW SECTION</string>
    <string name="form_section_edit_action_text">EDIT SECTION</string>
    <string name="form_section_warm_up_label">WARM UP</string>
    <string name="form_section_round_count_label">ROUNDS</string>
    <string name="form_section_work_label">WORK</string>
    <string name="form_section_rest_label">REST</string>
    <string name="form_section_cool_down_label">COOL DOWN</string>
    <string name="form_section_default_time_value">00:00</string>
    <string name="form_section_default_long_time_value">00:00:00</string>
    <string name="form_section_default_round_value">1</string>
    <string name="form_section_picker_divider">:</string>

    <string name="load_workout_header_label">LOAD WORKOUT</string>

    <string name="notification_press_again_to_exit">"Press the back button once again to exit.</string>
    <string name="notification_cant_delete_last_workout">"Can't delete last workout.</string>
    <string name="notification_long_press_to_delete_workout">"Long press on a workout to delete.</string>
    <string name="notification_long_press_to_delete_section">"Long press on a section to delete.</string>
    <string name="notification_hold_to_reset">"Hold to reset.</string>

    <string name="dialog_delete_workout_title">Delete workout</string>
    <string name="dialog_delete_workout_message">Are you sure you want to delete this workout?</string>

    <string name="dialog_delete_workout_section_title">Delete workout section</string>
    <string name="dialog_delete_workout_section_message">Are you sure you want to delete this workout section?</string>

    <string name="dialog_button_yes">Yes</string>
    <string name="dialog_button_no">No</string>

    <string-array name="main_menu_items">
        <item>EDIT</item>
        <item>LOAD</item>
        <item>NEW</item>
        <item>SET MUSIC</item>
        <item>SETTINGS</item>
    </string-array>

    <string name="music_select_albums">Albums</string>
    <string name="music_select_artists">Artists</string>
    <string name="music_select_playlist">Playlist</string>
    <string name="music_select_songs">Songs</string>
    <string name="music_select_rescan">Rescan</string>
    <string name="music_select_rescan_in_progress">Rescanning external storage…</string>

    <string name="database_name">tabatarhytm.db</string>

    <string name="crash_report_email_subject">[CRASH REPORT]</string>
    <string name="crash_toast_text">Ooooops ! I crashed, but a report has been sent to my developer to help fix the
        issue!
    </string>

    <string name="media_file_not_found">Some audio files from your saved playlist are not found on your SD card, they
        have been removed from your playlist.
    </string>

    <string name="workout_cancel_dialog_title">Abort workout</string>
    <string name="workout_cancel_dialog_message">This will cancel your current workout session. Are you sure you want to continue?</string>

    <string name="workout_finished_tweet" formatted="false">Just finished \'%s\' workout with #TabataRhythmTimer</string>
    <string name="generic_tweet" formatted="false">Checkout this HIIT timer with music player! #TabataRhythmTimer</string>

    <string name="about_version">Version:</string>
    <string name="about_contact">Any improvement ideas, identified bugs, remarks are welcome via e-mail to: tabatarhythmtimer@gmail.com</string>
    <string name="about_rate_app">Please rate this app on Play Store:</string>
    <string name="about_copy_right_pattern">Created by: Laszlo Sisa, ©%d</string>

    <string name="settings_header_label">SETTINGS</string>
    <string name="settings_power_saving_header_label">POWER SAVING OPTIONS</string>
    <string name="settings_low_refresh_rate">Low refresh rate of countdown timer</string>
    <string name="settings_wake_lock">Allow screen to sleep during workout</string>
    <string name="settings_options_saving_header_label">WORKOUT SETTINGS</string>
    <string name="settings_pause_on_call">Auto pause on incoming call</string>

    <string name="change_log_whats_new_title_pattern" formatted="false">What\'s new in %s?</string>

</resources>
