<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="#FF444444"
              android:padding="15dp">

    <LinearLayout android:id="@+id/aboutVersionLayout"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:orientation="horizontal"
                  android:layout_marginBottom="30dp">

        <TextView android:id="@+id/aboutVersionText"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/about_version"
                  android:textSize="12sp"
                  android:layout_marginRight="3dp"/>

        <TextView android:id="@+id/aboutVersionName"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textSize="12sp"/>

    </LinearLayout>

    <com.sisa.tabata.ui.widget.HtmlTextView android:id="@+id/aboutDescription"
                                            android:layout_width="wrap_content"
                                            android:layout_height="wrap_content"
                                            android:text="@string/about_description"
                                            android:textSize="14sp"
                                            android:layout_marginBottom="30dp"/>

    <TextView android:id="@+id/aboutContact"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/about_contact"
              android:textSize="14sp"
              android:autoLink="all"
              android:layout_marginBottom="30dp"/>

    <TextView android:id="@+id/aboutCopyRight"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/about_copy_right_pattern"
              android:textSize="14sp"
              android:layout_marginBottom="30dp"/>

    <ImageButton android:id="@+id/aboutCloseButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@android:drawable/ic_menu_close_clear_cancel"
                 android:layout_gravity="center"/>

</LinearLayout>
