<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#000000">

    <!-- Header -->
    <LinearLayout
            android:id="@+id/headerLayout"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentTop="true"
            android:layout_margin="0dp"
            android:background="@android:color/holo_blue_dark"
            android:baselineAligned="false"
            android:gravity="left"
            android:orientation="horizontal"
            android:paddingBottom="1dp">

        <FrameLayout
                android:id="@+id/headerFrame"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="#000000">


            <TextView
                    android:id="@+id/settingsHeaderLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/settings_header_label"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"/>
        </FrameLayout>
    </LinearLayout>

    <!-- Main content -->
    <RelativeLayout
            android:id="@+id/mainContentLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/headerLayout"
            android:gravity="top|center">

        <!-- Settings list -->
        <ScrollView
                android:id="@+id/settingsScrollView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_margin="5dp"
                android:paddingTop="5dp">

            <!-- Settings container layout -->
            <LinearLayout
                    android:id="@+id/settingsLayout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <!-- Workout options -->
                <LinearLayout
                        android:id="@+id/workoutOptionsLayout"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="#333333">

                    <LinearLayout
                            android:id="@+id/workoutOptionsHeaderLayout"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:background="#000000"
                            android:layout_marginBottom="2dp">

                        <ImageView
                                android:id="@+id/workoutOptionIscon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@android:drawable/ic_menu_recent_history"
                                android:layout_gravity="center"
                                android:paddingRight="10dp"/>

                        <TextView
                                android:id="@+id/workoutOptionsHeaderTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="fill_parent"
                                android:text="@string/settings_options_saving_header_label"
                                android:gravity="center"
                                android:textSize="18sp"/>

                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:background="#000000">

                        <CheckBox
                                android:id="@+id/autoPauseOnCallCheckbox"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:width="35dp"/>

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="16sp"
                                android:text="@string/settings_pause_on_call"/>

                    </LinearLayout>

                </LinearLayout>

                <!-- Power saving options -->
                <LinearLayout
                        android:id="@+id/powerSavingLayout"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:background="#333333">

                    <LinearLayout
                            android:id="@+id/powerSavingHeaderLayout"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:background="#000000"
                            android:layout_marginBottom="2dp"
                            android:paddingTop="20dp">

                        <ImageView
                                android:id="@+id/powerSavingIcon"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@android:drawable/ic_lock_idle_low_battery"
                                android:layout_gravity="center"
                                android:paddingRight="10dp"/>

                        <TextView
                                android:id="@+id/powerSavingHeaderTextView"
                                android:layout_width="wrap_content"
                                android:layout_height="fill_parent"
                                android:text="@string/settings_power_saving_header_label"
                                android:gravity="center"
                                android:textSize="18sp"/>

                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:background="#000000">

                        <CheckBox
                                android:id="@+id/lowRefreshRateCheckbox"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:width="35dp"/>

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="16sp"
                                android:text="@string/settings_low_refresh_rate"/>

                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:background="#000000">

                        <CheckBox
                                android:id="@+id/wakeLockDisabledCheckbox"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:width="35dp"/>

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="16sp"
                                android:text="@string/settings_wake_lock"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>


</RelativeLayout>
